Refactor: 게시판 응답 분리와 알림 설정 일괄 업데이트 최적화